# energydoc-talk-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/energydoc_talk_ai/core/: config.py  logger.py
src/energydoc_talk_ai/ingestion/: embeddings.py  extract_text.py  pipeline.py  split_text.py  vector_store.py
src/energydoc_talk_ai/rag/: llm.py  prompt.py  rag_pipeline.py  retriever.py
src/energydoc_talk_ai/ui/streamlit/: app.py  app_style.py
src/energydoc_talk_ai/ui/streamlit/components/: __init__.py  chat_box.py  render_ingestion.py  render_sidebar.py  setup_session_state.py  upload_pdfs.py
